<resources>
    <string name="app_name">TeleHealth Doctor</string>
    <string name="sign_in_with_otp">Sign in with OTP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_to_telehelth">Login to </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="sign_up_to_doctor">Sign up to</string>
    <string name="full_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="location">Location</string>
    <string name="license_number">License Number</string>
    <string name="sign_up_">Sign-up</string>
    <string name="already_account">Already account?</string>
    <string name="login">Login</string>
    <string name="enter_verification_code_">Enter verification code which we have send you on your register mobile number</string>
    <string name="submit">Submit</string>
    <string name="resend">Resend</string>
    <string name="verify_your_account">Verify your Account</string>
    <string name="telehealth">Telehealth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_appointments">New Appointments</string>
    <string name="see_all">See All</string>
    <string name="view_all">View All</string>
    <string name="availability">Availability</string>
    <string name="profile">Profile</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="personal_information">Personal Information</string>
    <string name="logout">Logout</string>
    <string name="support_chat">Support Chat</string>
    <string name="change_password">Change Password</string>
    <string name="manage_finance">Manage Finance</string>
    <string name="insurance">Insurance</string>
    <string name="rating_and_reviews">Rating and Reviews</string>
    <string name="post_feeds">Post Feeds</string>
    <string name="fee_management">Fee Management</string>
    <string name="prescription"><u>Prescriptions</u></string>

</resources>