<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgound"
    tools:context=".ui.SignUpWithOtp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/top_corner_radius"
        android:orientation="vertical"
        android:padding="@dimen/_15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_your_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/enter_verification_code_"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/dim14sp" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_25dp"
            app:height="60dp"
            app:width="@dimen/_70dp"
            app:bar_enabled="false"
            app:otp_box_background="@drawable/editor_back"
            app:bar_height="2dp"
            app:length="4"
            app:otp_text_size="24dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25dp"
            android:background="@drawable/btn_back"
            android:padding="@dimen/_15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/submit"
                android:textColor="@color/white" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_22dp"
            android:text="Didn't Receive Code?"
            android:textColor="@color/gray_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_marginBottom="@dimen/_15dp"
            android:text="@string/resend"
            android:textColor="@color/main_color" />

    </LinearLayout>


</RelativeLayout>

