<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160dp"
        android:background="@drawable/home_shape" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="@dimen/_15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginLeft="@dimen/_15dp"
                android:text="Dashboard"
                android:textColor="@color/white"
                android:textSize="@dimen/_18dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_15dp"
                android:layout_marginRight="@dimen/_15dp"
                android:src="@drawable/notification" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:paddingStart="@dimen/_10dp"
            android:paddingEnd="@dimen/_10dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="@dimen/_110dp"
                android:layout_margin="@dimen/_10dp"
                android:layout_weight="1"
                android:elevation="6dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_marginLeft="@dimen/_10dp"
                        android:src="@drawable/dashboard_user_one" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_marginLeft="@dimen/_10dp"
                        android:layout_marginTop="@dimen/_15dp"
                        android:text="250"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_marginLeft="@dimen/_10dp"
                        android:text="Total staff"
                        android:textColor="@color/gray_text"
                        android:textSize="@dimen/dim14sp"
                        android:textStyle="bold" />


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="@dimen/_110dp"
                android:layout_margin="@dimen/_10dp"
                android:layout_weight="1"
                android:elevation="6dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_marginLeft="@dimen/_10dp"
                        android:src="@drawable/dashboard_user_two" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_marginLeft="@dimen/_10dp"
                        android:layout_marginTop="@dimen/_15dp"
                        android:text="150"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_marginLeft="@dimen/_10dp"
                        android:text="Total Appoint"
                        android:textColor="@color/gray_text"
                        android:textSize="@dimen/dim14sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="@dimen/_110dp"
                android:layout_margin="@dimen/_10dp"
                android:layout_weight="1"
                android:elevation="6dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_marginLeft="@dimen/_10dp"
                        android:src="@drawable/dashboard_user_three" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_marginLeft="@dimen/_10dp"
                        android:layout_marginTop="@dimen/_15dp"
                        android:text="250"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_marginLeft="@dimen/_10dp"
                        android:text="Total Pending"
                        android:textColor="@color/gray_text"
                        android:textSize="@dimen/dim14sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/new_appointments"
                android:textColor="@color/black"
                android:textSize="@dimen/_18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/see_all"
                android:textColor="@color/main_color"
                android:textSize="@dimen/dim14sp" />


        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_marginEnd="@dimen/_15dp"
            android:elevation="6dp"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:padding="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/user_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/new_appointment" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/right_arrow"
                        android:layout_toLeftOf="@+id/right_arrow"
                        android:layout_toEndOf="@+id/user_logo"
                        android:layout_toRightOf="@+id/user_logo"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/_10dp"
                        android:paddingEnd="@dimen/_10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="Shawn hampton" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="Emergency appointment"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_18dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="@dimen/_16sp"
                                android:layout_height="@dimen/_16sp"
                                android:src="@drawable/clock" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_5dp"
                                android:layout_marginLeft="@dimen/_5dp"
                                android:singleLine="true"
                                android:text="09:00-10:00" />

                        </LinearLayout>

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/right_arrow"
                        android:layout_width="@dimen/_30dp"
                        android:layout_height="@dimen/_20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/right_arrow" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$50"
                        android:layout_centerVertical="true"
                        android:textColor="@color/main_color"
                        android:textSize="@dimen/_16sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/close_icon"/>

                        <ImageView
                            android:src="@drawable/rite"
                            android:layout_marginStart="@dimen/_15dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_15dp" />

                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Schedule Appointment"
                android:textColor="@color/black"
                android:textSize="@dimen/_18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/view_all"
                android:textColor="@color/main_color"
                android:textSize="@dimen/dim14sp" />


        </RelativeLayout>

        <com.michalsvec.singlerowcalendar.calendar.SingleRowCalendar
            android:id="@+id/main_single_row_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:deselection="false"
            app:longPress="false"
            app:multiSelection="false" />


    </LinearLayout>


</RelativeLayout>